[package]
name = "rusty_matrix"
version = "0.1.0"
edition = "2024"
description = "A Matrix-like terminal screensaver written in Rust"
license = "MIT"
repository = "https://github.com/BlackMamba360/rusty-matrix.git"

[[bin]]
name = "rusty-matrix"
path = "src/bin/run.rs"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream", "events", "default"] }
rand = "0.10.0-rc.8"
clap = { version = "4.5.60", features = ["derive", "cargo"] }
humantime = "2.3.0"